--- a/client/login.html
+++ b/client/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Log In</title>
+    <link rel="stylesheet" href="/css/login-signup.css">
 </head>
 <body>
 <div class="container-fluid">
