--- a/client/signup.html
+++ b/client/signup.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
     <title>Sign Up</title>
     <link rel="stylesheet" href="/css/login-signup.css">
+
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid" id="signup">
     <div class="container">
-        <div class="form-design">
-            <form action="/signup" method="post">
-                <label for="username" class="form-label">Username: </label>
-                <input type="text" name="username" id="username" class="form-input">
-                <label for="password" class="form-label">Password: </label>
-                <input type="password" name="password" id="password" class="form-input">
-                <label for="password_confirm" class="form-label">Password Confirm: </label>
-                <input type="password" name="password_confirm" id="password_confirm" class="form-input">
-                <label for="email" class="form-label">Email: </label>
-                <input type="email" name="email" id="email" class="form-input">
-                <button type="submit" class="btn btn-default">Sign Up</button>
+        <div class="login-signup-page">
+            <h3>Sign Up</h3>
+            <form class="form">
+                <label class="form-label" for="signup-username">Username:</label>
+                <input class="form-input" id="signup-username" type="text">
+                <br>
+                <label class="form-label" for="signup-email">Email: </label>
+                <input class="form-input" id="signup-email" type="email">
+                <br>
+                <label class="form-label" for="signup-password">Password:</label>
+                <input class="form-input" id="signup-password" type="password">
+                <br>
+                <label class="form-label" for="signup-password-con">Confirm:</label>
+                <input class="form-input" id="signup-password-con" type="password">
+                <br>
+                <button type="submit" class="form-submit btn btn-default">Sign Up</button>
             </form>
-            <span class="switch">Already have an account? Log in instead.</span>
+            <span class="switch" id="to-signup">Already have an account? <a href="/login.html">Log In instead.</a></span>
         </div>
     </div>
 </div>
