margin a little better

--- a/client/login.html
+++ b/client/login.html
@@ -11,11 +11,11 @@
         <div class="login-signup-page">
             <h3>Log In</h3>
             <form class="form">
-                <label class="form-label" for="login-username">Username:</label>
-                <input class="form-input" id="login-username" type="text">
+                <label class="form-label" for="username">Username:</label>
+                <input class="form-input" id="username" type="text">
                 <br>
-                <label class="form-label" for="login-password">Password:</label>
-                <input class="form-input" id="login-password" type="password">
+                <label class="form-label" for="password">Password:</label>
+                <input class="form-input" id="password" type="password">
                 <br>
                 <button type="submit" class="form-submit btn btn-default">Log In</button>
             </form>
