--- a/client/signup.html
+++ b/client/signup.html
@@ -12,17 +12,17 @@
         <div class="login-signup-page">
             <h3>Sign Up</h3>
             <form class="form">
-                <label class="form-label" for="signup-username">Username:</label>
-                <input class="form-input" id="signup-username" type="text">
+                <label class="form-label" for="username">Username:</label>
+                <input class="form-input" id="username" type="text">
                 <br>
-                <label class="form-label" for="signup-email">Email: </label>
-                <input class="form-input" id="signup-email" type="email">
+                <label class="form-label" for="email">Email: </label>
+                <input class="form-input" id="email" type="email">
                 <br>
-                <label class="form-label" for="signup-password">Password:</label>
-                <input class="form-input" id="signup-password" type="password">
+                <label class="form-label" for="password">Password:</label>
+                <input class="form-input" id="password" type="password">
                 <br>
-                <label class="form-label" for="signup-password-con">Confirm:</label>
-                <input class="form-input" id="signup-password-con" type="password">
+                <label class="form-label" for="password_con">Confirm:</label>
+                <input class="form-input" id="password_con" type="password">
                 <br>
                 <button type="submit" class="form-submit btn btn-default">Sign Up</button>
             </form>
