index login signup css

--- a/client/login.html
+++ b/client/login.html
@@ -19,7 +19,7 @@
                 <br>
                 <button type="submit" class="form-submit btn btn-default">Log In</button>
             </form>
-            <span class="switch" id="to-signup">Don't have an account you? <a href="/signup.html">Sign up instead.</a></span>
+            <span class="switch" id="to-signup">Don't have an account yet? <a href="/signup.html">Sign up instead.</a></span>
         </div>
     </div>
 </div>
